# bntpy

./: .gitignore  README.md  pyproject.toml  venv.yml
bntpy/: __main__.py  parameters.py  scenario.py
tests/: test_bntpy.py
