[tool.poetry]
name = "bntpy"
version = "0.1.0"
description = ""
authors = ["Matias Barrientos <matias.barrientosg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pgmpy = "^0.1.16"
toml = "^0.10.2"
graphviz = "^0.17"
pydot = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
